ingress/by_pass.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: external-service
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: external-service
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: "/"
            backend:
              serviceName: demo
              servicePort: 80
