ingress/kong-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /kong
        backend:
          serviceName: kong-kong-stg-proxy
          servicePort: 8001
