ingress/konga-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: konga-ingress
  namespace: devops
  labels:
    app: konga
spec:
  rules:
  - http:
      paths:
      - path: /konga
        backend:
          serviceName: konga.devops.svc.svc.cluster.local
          servicePort: 80
