ingress/multiple_ingresses.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: open-api-proxy-web
  annotations:
    konghq.com/override: api-proxy-custom
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
---
 apiVersion: configuration.konghq.com/v1
 kind: KongPlugin
 metadata:
   name: api-proxy-rate-limiting
   namespace: default
 config:
   redis_database: 0
   policy: "cluster"
   redis_timeout: 2000
   hide_client_headers: false
   hour: 2000
   minute: 100
   limit_by: "ip"
   redis_port: 6379
   second: 10
   fault_tolerant: true
 plugin: rate-limiting
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-proxy
  namespace: default
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: api-proxy-rate-limiting
spec:
  rules:
    - host: api.demo.local.internal
      http:
        paths:
          - path: "/api/v1"
            backend:
              serviceName: open-api-proxy-web
              servicePort: 80
