ingress/podinfo-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/override: podinfo-ki
    konghq.com/plugins: podinfo-cors,podinfo-basic-auth
    monitor.stakater.com/enabled": "true"
#   "monitor.stakater.com/healthEndpoint": "/api/status"
    monitor.stakater.com/name: "Pod info"
    monitor.stakater.com/forceHttps: "true"
    appinsights.monitor.stakater.com/statuscode: "200"
    appinsights.monitor.stakater.com/retryenable: "false"
    appinsights.monitor.stakater.com/frequency: "900"
spec:
  rules:
  - http:
      paths:
      - path: /podinfo
        backend:
          serviceName: podinfo
          servicePort: 8989
